<resources>
    <string name="app_name">AIChatMate - Powerful AI Bot,AI Chat</string>
    <string name="chatgpt">ChatBot</string>
    <string name="hint">Write your question?</string>
    <string name="chat_now">CHAT NOW</string>
    <string name="example">Example :</string>
    <string name="create_sample_post">Create Sample Question</string>
    <string name="create_your_sample_post">Create Your Own Sample Question</string>
    <string name="exampleQuestion">Exmaple Question</string>
    <string name="loading">Loading…</string>
</resources>